[tool.poetry]
name = "movies"
version = "0.1.0"
description = "scrape the top movies"
authors = ["Dan Nelson <danelson@nwi.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"
jinja2-time = "^0.2.0"
python-time = "^0.3.0"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
